force-app/main/default/objects/Person_in_charge__c/Person_in_charge__c.object-meta.xml
<CustomObject>
    <description>顧客側の担当者情報（唄）</description>
    <label>顧客担当者</label>
    <nameField>
        <label>顧客担当者</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>