force-app/main/default/objects/Person_in_charge__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>顧客の年齢（唄）</description>
    <label>年齢</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>