force-app/main/default/objects/Person_in_charge__c/fields/Field349__c.field-meta.xml
<CustomField>
    <fullName>Field349__c</fullName>
    <label>顧客担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>