force-app/main/default/objects/Person_in_charge__c/fields/Field678__c.field-meta.xml
<CustomField>
    <fullName>Field678__c</fullName>
    <label>顧客優先順</label>
    <length>255</length>
    <type>Text</type>
</CustomField>