force-app/main/default/objects/Person_in_charge__c/fields/Field680__c.field-meta.xml
<CustomField>
    <fullName>Field680__c</fullName>
    <label>顧客担当者名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>