force-app/main/default/objects/Person_in_charge__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>顧客担当者ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>