force-app/main/default/objects/Person_in_charge__c/fields/mobile_tel_no__c.field-meta.xml
<CustomField>
    <fullName>mobile_tel_no__c</fullName>
    <description>顧客の携帯電話番号（唄）</description>
    <label>携帯番号</label>
    <type>Phone</type>
</CustomField>