force-app/main/default/objects/Person_in_charge__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <description>会員の役職（唄）</description>
    <label>役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>