force-app/main/default/objects/Person_in_charge__c/fields/Structure_of_a_family__c.field-meta.xml
<CustomField>
    <fullName>Structure_of_a_family__c</fullName>
    <description>顧客の家族構成（唄）</description>
    <label>家族構成</label>
    <type>TextArea</type>
</CustomField>