force-app/main/default/objects/Person_in_charge__c/fields/used_lang_kbn2__c.field-meta.xml
<CustomField>
    <fullName>used_lang_kbn2__c</fullName>
    <description>顧客の使用言語2（唄）</description>
    <label>使用言語2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>