force-app/main/default/objects/Person_in_charge__c/fields/used_lang_kbn__c.field-meta.xml
<CustomField>
    <fullName>used_lang_kbn__c</fullName>
    <description>顧客側の使用言語（唄）</description>
    <label>使用言語</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>