force-app/main/default/objects/Person_in_charge__c/fields/Years_in_Japan__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Japan__c</fullName>
    <label>来日歴</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>