force-app/main/default/objects/Person_in_charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>Field678__c</columns>
    <columns>Field349__c</columns>
    <columns>Field680__c</columns>
    <columns>position__c</columns>
    <columns>used_lang_kbn__c</columns>
    <columns>used_lang_kbn2__c</columns>
    <columns>mobile_tel_no__c</columns>
    <columns>Age__c</columns>
    <columns>Structure_of_a_family__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>